--- a/app/src/main/res/layout/fragment_feed_detail.xml
+++ b/app/src/main/res/layout/fragment_feed_detail.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
     <data>
+        <variable
+            name="item"
+            type="jp.gcreate.product.filteredhatebu.data.entities.FeedData"
+            />
 
     </data>
 
@@ -11,5 +18,150 @@
         android:layout_height="match_parent"
         >
 
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="0dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="24dp"
+            android:text="@{item.title}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+            tools:text="Here is the title sometimes very very long characters in this line."
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/url"
+            />
+
+        <TextView
+            android:id="@+id/url"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="marquee"
+            android:paddingBottom="0dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="12dp"
+            android:text="@{item.url}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            tools:text="http://hoge.test.com/hoge/very_long_long_url_the_difficult_fuga_fuga.html"
+            android:singleLine="true"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title"
+            app:layout_constraintBottom_toTopOf="@+id/summary"
+            />
+
+        <TextView
+            android:id="@+id/summary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:text="@{item.summary}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            tools:text="Content summary, hogehoge."
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/url"
+            />
+
+
+            <Button
+                android:id="@+id/read_more_button"
+                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/move_to_the_site"
+                app:layout_constraintRight_toLeftOf="@+id/add_filter_button"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/share_button"
+                app:layout_constraintBottom_toBottomOf="@+id/share_button"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintHorizontal_bias="1"
+                />
+
+            <Button
+                android:id="@+id/add_filter_button"
+                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/add_filter"
+                app:layout_constraintRight_toLeftOf="@+id/share_button"
+                app:layout_constraintLeft_toRightOf="@+id/read_more_button"
+                app:layout_constraintTop_toTopOf="@+id/share_button"
+                app:layout_constraintBottom_toBottomOf="@+id/share_button"
+                />
+
+            <ImageView
+                android:id="@+id/share_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp"
+                android:src="@drawable/ic_share"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:contentDescription="@string/share_url"
+                android:tint="@color/colorAccent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/add_filter_button"
+                app:layout_constraintTop_toBottomOf="@+id/summary"
+                />
+
+
+        <FrameLayout
+            android:id="@+id/bottom_sheet_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            app:behavior_peekHeight="100dp"
+            app:layout_behavior="@string/bottom_sheet_behavior"
+            android:visibility="gone"
+            >
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#88fafafa"
+                android:scrollbars="vertical"
+                android:fadeScrollbars="false"
+                tools:listitem="@layout/item_entry_bookmarks"
+                />
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/comment_status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:cardElevation="2dp"
+                app:cardUseCompatPadding="true"
+                >
+
+                <TextView
+                    android:id="@+id/comment_status_message"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/no_comments"
+                    android:padding="@dimen/item_padding"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                    />
+
+            </android.support.v7.widget.CardView>
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"
+                />
+
+        </FrameLayout>
     </android.support.constraint.ConstraintLayout>
 </layout>
