--- a/app/src/main/res/layout/item_feed_list_item.xml
+++ b/app/src/main/res/layout/item_feed_list_item.xml
@@ -19,13 +19,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="?attr/selectableItemBackground"
         >
 
         <TextView
             android:id="@+id/count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="@dimen/item_padding_with_item"
             android:text="---"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textColor="@color/red_600"
@@ -60,7 +62,6 @@
             android:id="@+id/favicon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/item_padding_with_item"
             tools:src="@drawable/favicon_placeholder"
             app:layout_constraintTop_toBottomOf="@+id/count"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -71,9 +72,8 @@
         <TextView
             android:id="@+id/url"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingRight="@dimen/item_padding_with_item"
             android:singleLine="true"
             android:ellipsize="marquee"
             android:text="@{StringUtil.cutProtocolFromUrl(item.url)}"
@@ -83,6 +83,8 @@
             app:layout_constraintRight_toLeftOf="@+id/date"
             app:layout_constraintBottom_toBottomOf="@+id/favicon"
             app:layout_constraintTop_toBottomOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             />
 
         <TextView
