--- a/app/src/main/res/layout/item_feed_list_item.xml
+++ b/app/src/main/res/layout/item_feed_list_item.xml
@@ -33,10 +33,7 @@
             android:textColor="@color/red_600"
             app:layout_constraintBottom_toBottomOf="@+id/title"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/favicon"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="@+id/title"
             tools:text="253"
             />
 
@@ -48,13 +45,20 @@
             android:text="@{item.title}"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             android:layout_gravity="fill_horizontal"
-            app:layout_constraintBottom_toTopOf="@+id/favicon"
             app:layout_constraintLeft_toRightOf="@+id/count"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Title"
+            tools:text="@tools:sample/lorem/random"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            />
+
+        <android.support.constraint.Barrier
+            android:id="@+id/sub_item_barrier"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:barrierDirection="bottom"
+            app:constraint_referenced_ids="count,title"
+            app:layout_constraintTop_toBottomOf="@+id/title"
             />
 
 
@@ -63,10 +67,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:src="@drawable/favicon_placeholder"
-            app:layout_constraintTop_toBottomOf="@+id/count"
+            tools:tint="@color/colorAccent"
+            app:layout_constraintTop_toBottomOf="@+id/sub_item_barrier"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/url"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
             />
 
         <TextView
@@ -79,12 +86,12 @@
             android:text="@{StringUtil.cutProtocolFromUrl(item.url)}"
             tools:text="www.google.com/hoge/abc/def/123/456/789/"
             app:layout_constraintLeft_toRightOf="@+id/favicon"
-            app:layout_constraintTop_toTopOf="@+id/favicon"
             app:layout_constraintRight_toLeftOf="@+id/date"
-            app:layout_constraintBottom_toBottomOf="@+id/favicon"
-            app:layout_constraintTop_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sub_item_barrier"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginTop="4dp"
             />
 
         <TextView
@@ -96,9 +103,10 @@
             tools:text="2011/1/1"
             app:layout_constraintLeft_toRightOf="@+id/url"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/favicon"
-            app:layout_constraintBottom_toBottomOf="@+id/favicon"
-            app:layout_constraintTop_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sub_item_barrier"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
             />
 
     </android.support.constraint.ConstraintLayout>
