--- a/app/src/main/res/layout/fragment_feed_detail.xml
+++ b/app/src/main/res/layout/fragment_feed_detail.xml
@@ -6,6 +6,7 @@
     >
 
     <data>
+
         <variable
             name="item"
             type="jp.gcreate.product.filteredhatebu.data.entities.FeedData"
@@ -13,59 +14,65 @@
 
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
 
-        <TextView
-            android:id="@+id/title"
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/main_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="0dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="24dp"
-            android:text="@{item.title}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-            tools:text="Here is the title sometimes very very long characters in this line."
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/url"
-            />
+            android:layout_height="match_parent"
+            >
 
-        <TextView
-            android:id="@+id/url"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ellipsize="marquee"
-            android:paddingBottom="0dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="12dp"
-            android:text="@{item.url}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            tools:text="http://hoge.test.com/hoge/very_long_long_url_the_difficult_fuga_fuga.html"
-            android:singleLine="true"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title"
-            app:layout_constraintBottom_toTopOf="@+id/summary"
-            />
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="0dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="24dp"
+                android:text="@{item.title}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                app:layout_constraintBottom_toTopOf="@+id/url"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Here is the title sometimes very very long characters in this line."
+                />
 
-        <TextView
-            android:id="@+id/summary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:text="@{item.summary}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            tools:text="Content summary, hogehoge."
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/url"
-            />
+            <TextView
+                android:id="@+id/url"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="marquee"
+                android:paddingBottom="0dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="12dp"
+                android:text="@{item.url}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:singleLine="true"
+                app:layout_constraintBottom_toTopOf="@+id/summary"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/title"
+                tools:text="http://hoge.test.com/hoge/very_long_long_url_the_difficult_fuga_fuga.html"
+                />
+
+            <TextView
+                android:id="@+id/summary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:text="@{item.summary}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/url"
+                tools:text="Content summary, hogehoge."
+                />
 
 
             <Button
@@ -74,12 +81,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/move_to_the_site"
-                app:layout_constraintRight_toLeftOf="@+id/add_filter_button"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/share_button"
                 app:layout_constraintBottom_toBottomOf="@+id/share_button"
-                app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintHorizontal_bias="1"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/add_filter_button"
+                app:layout_constraintTop_toTopOf="@+id/share_button"
                 />
 
             <Button
@@ -88,10 +95,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/add_filter"
-                app:layout_constraintRight_toLeftOf="@+id/share_button"
-                app:layout_constraintLeft_toRightOf="@+id/read_more_button"
-                app:layout_constraintTop_toTopOf="@+id/share_button"
                 app:layout_constraintBottom_toBottomOf="@+id/share_button"
+                app:layout_constraintLeft_toRightOf="@+id/read_more_button"
+                app:layout_constraintRight_toLeftOf="@+id/share_button"
+                app:layout_constraintTop_toTopOf="@+id/share_button"
                 />
 
             <ImageView
@@ -107,11 +114,13 @@
                 android:clickable="true"
                 android:contentDescription="@string/share_url"
                 android:tint="@color/colorAccent"
-                app:layout_constraintRight_toRightOf="parent"
+                android:focusable="true"
                 app:layout_constraintLeft_toRightOf="@+id/add_filter_button"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/summary"
                 />
 
+        </android.support.constraint.ConstraintLayout>
 
         <FrameLayout
             android:id="@+id/bottom_sheet_container"
@@ -121,7 +130,6 @@
             android:paddingRight="16dp"
             app:behavior_peekHeight="100dp"
             app:layout_behavior="@string/bottom_sheet_behavior"
-            android:visibility="gone"
             >
 
             <android.support.v7.widget.RecyclerView
@@ -163,5 +171,5 @@
                 />
 
         </FrameLayout>
-    </android.support.constraint.ConstraintLayout>
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
